# blog-actix-web-swagger

./: Cargo.toml
src/: main.rs
src/restaurants/: mod.rs  models.rs  services.rs
